--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,19 @@ repositories {
     mavenCentral()
 }
 
+// compiled output can be found in the build libs
+jar {
+    exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA', 'META-INF/*.MF'
+
+    manifest {
+        attributes 'Main-Class': 'com.zivoy.module3.Main'
+    }
+}
+
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
+
+
 sourceSets {
     main {
         java {
@@ -23,5 +36,5 @@ sourceSets {
 }
 
 dependencies {
-    compile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
