--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ repositories {
 jar {
     exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA', 'META-INF/*.MF'
 
+    archivesBaseName = 'module3'
+    archiveVersion = 'question4'
+
     manifest {
         attributes 'Main-Class': 'com.zivoy.module3.Main'
     }
